# Gator

./: .gitignore  BENCHMARK_REPORT.md  CMakeLists.txt  FRESH_INSTALL_TEST.md  META_TOOL_SYSTEM.md  PUSH_VERIFICATION.md  Progress.md  README.md  VOICE_TOGGLE.md  _chat_rigorous_test.py  _commit_iron_gator.sh  _commit_now.sh  _final_status.sh  _finalize_install.sh  _fresh_push.sh  _fresh_push_no_ui.sh  _ghost_test_workers.py  _iron_test.sh  _iron_tg.sh  _iron_tg_announce.sh  _preflight.sh  _push_iron_gator.sh  _remove_old_ui.sh  _run_unit_tests.sh  _stress_all_functions_tools.py  _stress_coding_longcontext.py  _test_narrative.sh  _three_turn.py  bootstrap.py  bootstrap.sh  build_report.md  check_vitals.sh  config.json  gator_bridge.py  install.sh  installer.sh  main.py  probe_backend_loop.py  probe_real_model.py  quality_probe.sh  (+16 more)
config/: hive_verified_specs.json  logic_constraints.json
models/: __init__.py  datamodel.py  manifest.json
research/: medication_test.md  phase2_med_test.py  phase2_test.md  phase2_test.pdf.py  scout_ingest.md
src/: _debug_vram.py  agentic_cron.py  debug_bridge.py  debug_gate.py  debug_generate.py  decommission_node.py  dream_engine.py  event_bus.py  extract_logic.py  extraction_corpus.py  gator_bridge.py  genesis_verify.sh  genesis_verify_v2.sh  hybrid_memory.py  maintenance.py  memory_core.py  persona_engine.py  phase1_eventbus_test.py  phase1_post_genesis_test.py  phase2_post_genesis_test.py  phase3_post_genesis_test.py  pulse_check.py  registry_manager.py  scholar_sense.py  skills.py  test_gator.py  test_gator_fixed.py  wakeup.sh
(+35 files in other folders)
